# capo

./: .gitignore  .mcp.json  CLAUDE.md  Dockerfile.repl  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
docs/: dosanddonts.md
scripts/: run_fine_tuning.py  run_inference.py  run_raw_data_processing.py
scripts/configs/: fine_tuning.yaml  raw_data_processing.yaml
skills/: README.md
skills/analysis/analyze-bam-reads/: SKILL.md
skills/analysis/analyze-fastq-reads/: SKILL.md
skills/analysis/analyze-fcs/: SKILL.md
skills/analysis/analyze-protein-sequences/: SKILL.md
skills/analysis/analyze-single-cell/: SKILL.md
skills/analysis/analyze-tabular/: SKILL.md
skills/assay-fastq-to-plm-ready-dataset/: SKILL.md
skills/cloud-provider-connection/lambda/: SKILL.md
skills/clustering/: SKILL.md
skills/clustering/mmseqs2/: SKILL.md
skills/clustering/references/: biological-validation.md  core-papers.md  decision-matrix.md  pitfalls.md
skills/clustering/scripts/: cluster_profiles.py  cluster_splits.py  clusterers.py  config_schema.py  evaluate_clusters.py  export_outputs.py  io_utils.py  plotting.py  precluster_reduction.py  run_clustering.py  tune_clusterers.py
skills/code-writing/: SKILL.md
skills/cost-estimation/: SKILL.md
skills/cost-estimation/references/: aws-pricing.md  azure-pricing.md  google-cloud-pricing.md  huggingface-jobs-pricing.md  lambda-pricing.md
skills/data-processing/numerical-data/: SKILL.md
skills/data-processing/protein-sequence-data/: SKILL.md
skills/data-processing/single-cell/: SKILL.md
skills/dimensionality-reduction/: SKILL.md
skills/dimensionality-reduction/references/: core-papers.md  decision-matrix.md  parameter-guide.md  pitfalls.md
skills/dimensionality-reduction/scripts/: config_schema.py  embedding_backends.py  evaluate_reduction.py  export_outputs.py  feature_builders.py  io_utils.py  plotting.py  reducers_linear.py  reducers_nonlinear.py  run_dimensionality_reduction.py  sampling.py
skills/huggingface-jobs/: SKILL.md
skills/lambda-session/: SKILL.md
skills/loading-data/: SKILL.md
skills/model-selection/: SKILL.md
skills/profiling-datasets/: SKILL.md
src/capo/: __init__.py  config.py  constants.py  preflight_keys.py
tests/: test_cli.py  test_compactor.py  test_cost.py  test_cost_report_integration.py  test_dataset_source.py  test_hf_research.py  test_instance_guard.py  test_lambda_preflight.py  test_lambda_pricing.py  test_lambda_rsync_cmd.py  test_lambda_ssh_keys.py  test_lambda_tools.py  test_memory_run_report.py  test_model_resolution.py  test_post_launch_diagnostics.py  test_prelaunch_continuation.py  test_report_tables.py  test_reuse_and_session.py  test_training_health_monitor.py  test_training_recovery.py
(+168 files in other folders)
